Finish order assignment/accept/reject func
