# app/src/routes/driver/validator.js
@@ -1,10 +1,10 @@
 var { body, param, query } = require('express-validator');
 var emailValidate = require("../../../mongoose/schema/emailValidation");
 
-var { PrismaClient } = require('@prisma/client');
+var { PrismaClient, OrderStatus } = require('@prisma/client');
 const db = new PrismaClient()
 
-var Utils = require('../../utills');
+var Utils = require('../../utils');
 
 const getDriverEmailCodeValidator = [
   query('email').exists().withMessage("Please input email").isEmail().withMessage("Invalid email address").bail().custom(async value => {
@@ -157,6 +157,129 @@ const updateLocationValidator = [
   Utils.validate
 ]
 
+const driverAcceptOrRejectOrderValidator = [
+  query("orderId").exists().withMessage("Please input order id").isInt().withMessage("Invalid order id").toInt().bail().custom(async (value, { req }) => {
+    const order = await db.deliveryOrder.findUnique({
+      where: {
+        id: value
+      },
+      include: {
+        restaurant: {
+          select: {
+            id: true,
+            name: true,
+            street: true,
+            city: true,
+            state: true,
+            zipCode: true,
+            phone: true,
+            email: true
+          }
+        }
+      }
+    });
+
+    // if order does not exist
+    if (!order) {
+      return Promise.reject("Order does not exist");
+    }
+
+    // if the order does not belong to current driver
+    if (req.user.id != order.driverId) {
+      return Promise.reject("This is not your order");
+    }
+
+    if (order.status != OrderStatus.ASSIGNED) {
+      return Promise.reject("Invalid order status = " + order.status);
+    }
+
+    req.order = order;
+  }),
+  Utils.validate
+]
+
+const driverPickUpOrderValidator = [
+  query("orderId").exists().withMessage("Please input order id").isInt().withMessage("Invalid order id").toInt().bail().custom(async (value, { req }) => {
+    const order = await db.deliveryOrder.findUnique({
+      where: {
+        id: value
+      },
+      include: {
+        restaurant: {
+          select: {
+            id: true,
+            name: true,
+            street: true,
+            city: true,
+            state: true,
+            zipCode: true,
+            phone: true,
+            email: true
+          }
+        }
+      }
+    });
+
+    // if order does not exist
+    if (!order) {
+      return Promise.reject("Order does not exist");
+    }
+
+    // if the order does not belong to current driver
+    if (req.user.id != order.driverId) {
+      return Promise.reject("This is not your order");
+    }
+
+    if (order.status != OrderStatus.ACCEPTED) {
+      return Promise.reject("Invalid order status = " + order.status);
+    }
+
+    req.order = order;
+  }),
+  Utils.validate
+]
+
+const driverDeliverOrderValidator = [
+  query("orderId").exists().withMessage("Please input order id").isInt().withMessage("Invalid order id").toInt().bail().custom(async (value, { req }) => {
+    const order = await db.deliveryOrder.findUnique({
+      where: {
+        id: value
+      },
+      include: {
+        restaurant: {
+          select: {
+            id: true,
+            name: true,
+            street: true,
+            city: true,
+            state: true,
+            zipCode: true,
+            phone: true,
+            email: true
+          }
+        }
+      }
+    });
+
+    // if order does not exist
+    if (!order) {
+      return Promise.reject("Order does not exist");
+    }
+
+    // if the order does not belong to current driver
+    if (req.user.id != order.driverId) {
+      return Promise.reject("This is not your order");
+    }
+
+    if (order.status != OrderStatus.PICKEDUP) {
+      return Promise.reject("Invalid order status = " + order.status);
+    }
+
+    req.order = order;
+  }),
+  Utils.validate
+]
+
 module.exports = {
     getDriverEmailCodeValidator,
     postDriverSignUpValidator,
@@ -166,5 +289,8 @@ module.exports = {
     postDriverResetPasswordValidator,
     deleteDriverAccountValidator,
     getDriverOrdersValidator,
-    updateLocationValidator
+    updateLocationValidator,
+    driverPickUpOrderValidator,
+    driverDeliverOrderValidator,
+    driverAcceptOrRejectOrderValidator
 }
